<resources>
    <string name="app_name">RepubliQ</string>
    <string name="tittle">RepubliQ</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="esqueceSenha">Esqueceu sua senha?</string>
    <string name="lembre_de_mim">Lembre de mim</string>
    <string name="entrar">Entrar</string>
    <string name="Cadastrar">Cadastre-se</string>
    <string name="visualizar">Visualizar</string>
    <string name="nome">Nome</string>
    <string name="preco">Preco</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="email">Email</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="mudar_senha">Mudar senha</string>
    <string name="pesquisar">Pesquisar...</string>
    <string name="tipo_moradia">Tipo Moradia</string>
    <string name="descricao">Descricao</string>
    <string name="registrar_residencia">Registrar Residencia</string>
    <string name="cep">CEP</string>
    <string name="numero">Numero</string>
    <string name="pais">País</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="complemento">Complemento</string>
    <string name="ofertado">Ofertado</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="alterar_dados">Alterar Dados</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="genero">Gênero</string>
    <string name="proprietario">Proprietario</string>
    <string name="alterar">Alterar</string>
    <string name="editar_residencia">Editar Residencia</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="registrar">Registrar</string>
    <string name="residencia">Residencia</string>
    <string name="contatos">Contatos:</string>
    <string name="email_user">email user</string>
    <string name="entrar_em_contato">Entrar em contato</string>
</resources>