<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="br.edu.ifsp.tcc.apprepublic.view.EditResidence">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textDescricaotitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/editar_residencia"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/containerComponentes"
            style="@style/ConteinerComponents"
            android:layout_width="369dp"
            android:layout_height="495dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescricaotitulo" />

        <EditText
            android:id="@+id/edittext_Titulo"
            android:layout_marginTop="30dp"
            style="@style/Edit_Text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/tittle"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/containerComponentes"
            app:layout_constraintStart_toStartOf="@id/containerComponentes"
            app:layout_constraintTop_toTopOf="@+id/containerComponentes" />

        <EditText
            android:id="@+id/edittext_DescricaoMoradia"
            style="@style/Edit_Text"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/descricao"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/containerComponentes"
            app:layout_constraintStart_toStartOf="@id/containerComponentes"
            app:layout_constraintTop_toBottomOf="@+id/edittext_Titulo" />


        <TextView
            android:id="@+id/textTipoMoradia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tipo_moradia"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
            app:layout_constraintStart_toStartOf="@+id/containerComponentes"
            app:layout_constraintTop_toBottomOf="@+id/edittext_DescricaoMoradia" />

        <Spinner
            android:id="@+id/spinner_TipoMoradia"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
            app:layout_constraintStart_toStartOf="@+id/containerComponentes"
            app:layout_constraintTop_toBottomOf="@+id/textTipoMoradia" />

        <EditText
            android:id="@+id/edittext_PrecoMoradia"
            style="@style/Edit_Text"
            android:layout_marginStart="30dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/preco"
            android:textColorHint="@color/gray"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_TipoMoradia" />

        <CheckBox
            android:id="@+id/checkbox_OfertadoMoradia"
            style="@style/CheckBox"
            android:layout_width="223dp"
            android:layout_height="46dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/ofertado"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/containerComponentes"
            app:layout_constraintEnd_toEndOf="@+id/containerComponentes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/containerComponentes"
            app:layout_constraintTop_toBottomOf="@+id/edittext_PrecoMoradia"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textEnderecoMoradia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Endereço"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerComponentes" />


        <View
            android:id="@+id/containerEndereco"
            style="@style/ConteinerComponents"
            android:layout_width="369dp"
            android:layout_height="850dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEnderecoMoradia" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/editText_textCEP"
            style="@style/Edit_Text"
            android:layout_marginTop="30dp"
            android:hint="@string/cep"
            android:textColorHint="@color/gray"
            android:inputType="number"
            android:textColor="@color/black"
            app:mask="#####-###"
            app:layout_constraintEnd_toEndOf="@+id/containerEndereco"
            app:layout_constraintStart_toStartOf="@+id/containerEndereco"
            app:layout_constraintTop_toTopOf="@+id/containerEndereco" />

        <!-- EditText para Número -->
        <EditText
            android:id="@+id/edittext_textNumero"
            style="@style/Edit_Text"
            android:layout_marginTop="30dp"
            android:hint="@string/numero"
            android:textColorHint="@color/gray"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/containerEndereco"
            app:layout_constraintStart_toStartOf="@+id/containerEndereco"
            app:layout_constraintTop_toBottomOf="@+id/editText_textCEP"
            android:autofillHints="" />

        <!-- EditText para País -->
        <EditText
            android:id="@+id/edittext_Pais"
            style="@style/Edit_Text"
            android:layout_marginTop="30dp"
            android:hint="@string/pais"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/containerEndereco"
            app:layout_constraintStart_toStartOf="@+id/containerEndereco"
            app:layout_constraintTop_toBottomOf="@+id/edittext_textNumero"
            android:autofillHints="" />

        <!-- EditText para Estado -->
        <EditText
            android:id="@+id/edittext_Estado"
            style="@style/Edit_Text"
            android:layout_marginTop="30dp"
            android:hint="@string/estado"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/containerEndereco"
            app:layout_constraintStart_toStartOf="@+id/containerEndereco"
            app:layout_constraintTop_toBottomOf="@+id/edittext_Pais" />

        <!-- EditText para Cidade -->
        <EditText
            android:id="@+id/edittext_Cidade"
            style="@style/Edit_Text"
            android:layout_marginTop="30dp"
            android:hint="@string/cidade"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/containerEndereco"
            app:layout_constraintStart_toStartOf="@+id/containerEndereco"
            app:layout_constraintTop_toBottomOf="@+id/edittext_Estado" />

        <!-- EditText para Bairro -->
        <EditText
            android:id="@+id/edittext_Bairro"
            style="@style/Edit_Text"
            android:layout_marginTop="30dp"
            android:hint="@string/bairro"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/containerEndereco"
            app:layout_constraintStart_toStartOf="@+id/containerEndereco"
            app:layout_constraintTop_toBottomOf="@+id/edittext_Cidade" />

        <!-- EditText para Rua -->
        <EditText
            android:id="@+id/edittext_Rua"
            style="@style/Edit_Text"
            android:layout_marginTop="30dp"
            android:hint="@string/rua"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/containerEndereco"
            app:layout_constraintStart_toStartOf="@+id/containerEndereco"
            app:layout_constraintTop_toBottomOf="@+id/edittext_Bairro" />

        <!-- EditText para Complemento -->
        <EditText
            android:id="@+id/edittext_Complemento"
            style="@style/Edit_Text"
            android:layout_marginTop="30dp"
            android:hint="@string/complemento"
            android:textColorHint="@color/gray"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/containerEndereco"
            app:layout_constraintStart_toStartOf="@+id/containerEndereco"
            app:layout_constraintTop_toBottomOf="@+id/edittext_Rua" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cadMoradia"
            style="@style/Button"
            android:layout_marginBottom="30dp"
            android:text="@string/Cadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_Complemento" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>