<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="br.edu.ifsp.tcc.apprepublic.view.UpdatePassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/mudar_senha"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/containerComponentes"
        style="@style/ConteinerComponents"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />


    <EditText
        android:id="@+id/edittext_email"
        style="@style/Edit_Text"
        android:layout_marginTop="36dp"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/containerComponentes"
        app:layout_constraintStart_toStartOf="@id/containerComponentes"
        app:layout_constraintTop_toTopOf="@id/containerComponentes" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_toggle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/senha"
        android:textColorHint="@color/gray"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/containerComponentes"
        app:layout_constraintEnd_toEndOf="@id/containerComponentes"
        app:layout_constraintTop_toBottomOf="@id/edittext_email"
        app:passwordToggleContentDescription="true">

        <EditText
            android:id="@+id/edittext_novaSenha"
            style="@style/Edit_Text"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_toggleConf"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/confirmar_senha"
        android:textColorHint="@color/gray"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/containerComponentes"
        app:layout_constraintEnd_toEndOf="@id/containerComponentes"
        app:layout_constraintTop_toBottomOf="@id/password_toggle"
        app:passwordToggleContentDescription="true">

        <EditText
            android:id="@+id/edittext_confirmarNovaSenha"
            style="@style/Edit_Text"
            android:inputType="textPassword"
            android:textColor="@android:color/black"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_alterarSenha"
        style="@style/Button"
        android:text="@string/alterar_senha"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_toggleConf"
        app:layout_constraintVertical_bias="0.168" />

</androidx.constraintlayout.widget.ConstraintLayout>
